"""
Core API for Sintellix Neural Network Framework
"""

import torch
import torch.nn as nn
from typing import Optional, List, Tuple, Dict, Any
import json
from pathlib import Path


class NeuronConfig:
    """
    Configuration for Neuron and NeuronModel

    Args:
        dim: Dimension of neuron matrices (default: 256)
        num_heads: Number of attention heads (default: 8)
        grid_size: Grid size (x, y, z) for neuron grid (default: (32, 32, 32))
        temporal_frames: Number of temporal frames for history (default: 8)
        enable_multi_head: Enable multi-head attention (default: True)
        enable_ssm: Enable State Space Model (default: True)
        enable_rwkv: Enable RWKV mechanism (default: True)
        enable_noise_filter: Enable adaptive noise filtering (default: True)
        enable_temporal_attention: Enable temporal attention (default: True)
        enable_fxaa_layer: Enable FXAA-like auxiliary prediction (default: True)
        enable_ddpm: Enable DDPM denoising (default: True)
        enable_global_aggregation: Enable global sparse attention (default: True)
    """

    def __init__(
        self,
        dim: int = 256,
        num_heads: int = 8,
        grid_size: Tuple[int, int, int] = (32, 32, 32),
        temporal_frames: int = 8,
        enable_multi_head: bool = True,
        enable_ssm: bool = True,
        enable_rwkv: bool = True,
        enable_noise_filter: bool = True,
        enable_temporal_attention: bool = True,
        enable_fxaa_layer: bool = True,
        enable_ddpm: bool = True,
        enable_global_aggregation: bool = True,
        gpu_cache_size_mb: int = 4096,
        ram_cache_size_mb: int = 16384,
        disk_cache_path: str = "./cache",
        eviction_threshold: int = 10,
        use_kv_cache: bool = True,
        kv_cache_size: int = 512,
    ):
        self.dim = dim
        self.num_heads = num_heads
        self.grid_size = grid_size
        self.temporal_frames = temporal_frames

        # Module switches
        self.enable_multi_head = enable_multi_head
        self.enable_ssm = enable_ssm
        self.enable_rwkv = enable_rwkv
        self.enable_noise_filter = enable_noise_filter
        self.enable_temporal_attention = enable_temporal_attention
        self.enable_fxaa_layer = enable_fxaa_layer
        self.enable_ddpm = enable_ddpm
        self.enable_global_aggregation = enable_global_aggregation

        # Storage config
        self.gpu_cache_size_mb = gpu_cache_size_mb
        self.ram_cache_size_mb = ram_cache_size_mb
        self.disk_cache_path = disk_cache_path
        self.eviction_threshold = eviction_threshold

        # Optimization config
        self.use_kv_cache = use_kv_cache
        self.kv_cache_size = kv_cache_size

    def to_dict(self) -> Dict[str, Any]:
        """Convert config to dictionary"""
        return {
            "dim": self.dim,
            "num_heads": self.num_heads,
            "grid_size": self.grid_size,
            "temporal_frames": self.temporal_frames,
            "modules": {
                "enable_multi_head": self.enable_multi_head,
                "enable_ssm": self.enable_ssm,
                "enable_rwkv": self.enable_rwkv,
                "enable_noise_filter": self.enable_noise_filter,
                "enable_temporal_attention": self.enable_temporal_attention,
                "enable_fxaa_layer": self.enable_fxaa_layer,
                "enable_ddpm": self.enable_ddpm,
                "enable_global_aggregation": self.enable_global_aggregation,
            },
            "storage": {
                "gpu_cache_size_mb": self.gpu_cache_size_mb,
                "ram_cache_size_mb": self.ram_cache_size_mb,
                "disk_cache_path": self.disk_cache_path,
                "eviction_threshold": self.eviction_threshold,
            },
            "optimization": {
                "use_kv_cache": self.use_kv_cache,
                "kv_cache_size": self.kv_cache_size,
            }
        }

    @classmethod
    def from_dict(cls, config_dict: Dict[str, Any]) -> 'NeuronConfig':
        """Create config from dictionary"""
        return cls(
            dim=config_dict.get("dim", 256),
            num_heads=config_dict.get("num_heads", 8),
            grid_size=tuple(config_dict.get("grid_size", [32, 32, 32])),
            temporal_frames=config_dict.get("temporal_frames", 8),
            **config_dict.get("modules", {}),
            **config_dict.get("storage", {}),
            **config_dict.get("optimization", {}),
        )

    def save(self, path: str):
        """Save config to JSON file"""
        with open(path, 'w') as f:
            json.dump(self.to_dict(), f, indent=2)

    @classmethod
    def load(cls, path: str) -> 'NeuronConfig':
        """Load config from JSON file"""
        with open(path, 'r') as f:
            config_dict = json.load(f)
        return cls.from_dict(config_dict)


class NeuronModel(nn.Module):
    """
    Sintellix Neural Network Model with HOT Architecture

    This is a PyTorch-like interface to the C++ CUDA implementation.

    Args:
        config: NeuronConfig object

    Example:
        >>> config = NeuronConfig(dim=256, grid_size=(32, 32, 32))
        >>> model = NeuronModel(config)
        >>> model.initialize()
        >>> output = model(input_tensor)
    """

    def __init__(self, config: NeuronConfig):
        super().__init__()
        self.config = config
        self._native_model = None  # Will be initialized with C++ binding

    def initialize(self) -> bool:
        """
        Initialize the model (allocate all neurons)

        Returns:
            Success status
        """
        # TODO: Call C++ binding to initialize native model
        print(f"Initializing NeuronModel with config:")
        print(f"  - Dimension: {self.config.dim}")
        print(f"  - Grid size: {self.config.grid_size}")
        print(f"  - Num heads: {self.config.num_heads}")
        print(f"  - Temporal frames: {self.config.temporal_frames}")
        return True

    def forward(self, x: torch.Tensor) -> torch.Tensor:
        """
        Forward pass through the model

        Args:
            x: Input tensor [batch_size, dim, dim]

        Returns:
            Output tensor [batch_size, dim, dim]
        """
        # TODO: Call C++ binding for forward pass
        # For now, return identity as placeholder
        return x

    def backward(self, grad_output: torch.Tensor) -> torch.Tensor:
        """
        Backward pass for training

        Args:
            grad_output: Gradient of output [batch_size, dim, dim]

        Returns:
            Gradient of input [batch_size, dim, dim]
        """
        # TODO: Call C++ binding for backward pass
        return grad_output

    def update_parameters(self, learning_rate: float):
        """
        Update all parameters using Adam optimizer

        Args:
            learning_rate: Learning rate
        """
        # TODO: Call C++ binding for parameter update
        pass

    def replay_context(self, history: List[torch.Tensor], fast_mode: bool = True):
        """
        Fast context replay for state injection

        Args:
            history: List of historical inputs
            fast_mode: Skip output generation (default: True)
        """
        # TODO: Call C++ binding for context replay
        pass

    def save_state(self, path: str) -> bool:
        """
        Save model state to file (Protobuf + zstd)

        Args:
            path: Output file path

        Returns:
            Success status
        """
        # TODO: Call C++ binding for save_state
        print(f"Saving model state to: {path}")
        return True

    def load_state(self, path: str) -> bool:
        """
        Load model state from file

        Args:
            path: Input file path

        Returns:
            Success status
        """
        # TODO: Call C++ binding for load_state
        print(f"Loading model state from: {path}")
        return True

    def get_statistics(self) -> Dict[str, Any]:
        """
        Get storage statistics

        Returns:
            Dictionary with GPU/RAM/Disk usage statistics
        """
        # TODO: Call C++ binding for get_statistics
        return {
            "gpu_usage_bytes": 0,
            "ram_usage_bytes": 0,
            "disk_usage_bytes": 0,
            "total_blocks": 0,
            "gpu_blocks": 0,
            "ram_blocks": 0,
            "disk_blocks": 0,
        }


class Neuron:
    """
    Single neuron interface (for advanced usage)

    Most users should use NeuronModel instead.
    """

    def __init__(self, config: NeuronConfig, neuron_id: int, grid_x: int, grid_y: int, grid_z: int):
        self.config = config
        self.neuron_id = neuron_id
        self.grid_x = grid_x
        self.grid_y = grid_y
        self.grid_z = grid_z
        self._native_neuron = None  # Will be initialized with C++ binding

    def initialize(self) -> bool:
        """Initialize neuron (allocate memory)"""
        # TODO: Call C++ binding
        return True

    def forward(self, input_tensor: torch.Tensor, stream=None) -> torch.Tensor:
        """Forward pass"""
        # TODO: Call C++ binding
        return input_tensor

    def backward(self, grad_output: torch.Tensor, stream=None) -> torch.Tensor:
        """Backward pass"""
        # TODO: Call C++ binding
        return grad_output
